css/editor.css
/* ... */
.node-type-options .person-type-option.circle {
    line-height: 29px;
}

.node-type-options .person-type-option.circle span {
    display: inline-block;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    border: 1px solid black;
}

.node-type-options .person-type-option.text-in-middle {
    position: relative;
}

.node-type-options .person-type-option.text-in-middle strong {
    font-weight: bold;
    font-size: 8px;
    position: absolute;
    top: 8px;
    left: 10px;
}

.expand-arrow {
    cursor: pointer;
    font-size: 15px;
    margin-left: -1px;
    margin-right: 2px;
}

.expand-arrow:hover {
    color: #6666CC;
}

.node-type-options .expandable-node-type-option {
    background: transparent none center center no-repeat;
    border: 1px solid #F5F5F5;
    border-radius: 4px;
    display: inline-block;
    margin: 3px;
    height: 24px;
    width: 24px;
    box-shadow: 0 0 9px #DDDDDD inset;
    color: black !important;
    vertical-align: middle;
    text-decoration: none !important;
    /*
    TODO: Keep this:
    overflow: hidden;
    text-indent: 48px;
    line-height: 48px;
    font-size: 1px;
    TODO: remove this
    */
    text-align: center;
    line-height: 24px;
}

.node-type-options-extended * {
    vertical-align: middle;
}

.value-control-button {
    border: 1px solid #FFF;
    border-radius: 3px;
    box-shadow: 0 0 5px #DDD inset;
    cursor: pointer;
    display: inline-block;
    font-size: 1.1em;
    font-weight: bold;
    height: 1em;
    line-height: 1em;
    margin: 3px;
    padding: 3px;
    text-align: center;
    width: 1em;
}

.minus-button {
    color: #C00;
}

.plus-button {
    color: #080;
}

.cursor-normal {
    cursor: default;
}

.msdialog-modal-container .pedigree-template-chooser {
    width: 720px;
}

.msdialog-modal-container .pedigree-print-dialog {
    width: 760px !important;
    max-width: 760px !important;
}

.print-preview-header {
    text-align: left;
    margin-bottom: 2pt;
    line-height: 15pt;
}

.print-preview-footer {
    margin-top: 1px;
    margin-bottom: 13px;
    margin-left: 10px;
    margin-right: 25px;
    display: block !important;
    color: #733;
}

.print-preview-footer-text {
    color: black;
    margin-left: 7px;
}

.print-settings-block {
    margin: 0.25em 0 0.5em 0;
    display: block;
}

.print-move-span {
    margin-left: 70px;
}

.print-zoom-value {
    display: inline-block;
    width: 45px;
    height: 25px;
    text-align: center;
    margin-right: 5px;
    margin-left: 5px;
}

.print-small-button {
    width: 26px;
    height: 28px;
    cursor: pointer;
}

.print-long-button {
    height: 28px;
    cursor: pointer;
}

.print-orientation-span {
    margin-left: 70px;
}

.print-left-margin {
    margin-left: 10px;
}

.print-small-left-margin {
    margin-left: 5px;
}

.picture-box {
    display: inline-block;
    box-shadow: rgba(0, 0, 0, 0.5) 0 0 5px 2px;
    margin: 14px;
}

.picture-box:hover {
    cursor: pointer;
    box-shadow: rgba(0, 10, 0, 0.5) 0 0 5px 4px;
}

.preview-container {
    border: 1px;
    border-style: solid;
    border-color: #ccc;
    display: inline-block;
}

.template-picture-container {
    display: inline-block;
    margin: 3px;
}

.msdialog-box {
    /*overflow:auto;*/
    /*width: 60% !important;*/
    min-width: 680px !important;
    /*max-width: 720px !important;*/
    display: inline-block;
}

.msdialog-box .content {
    text-align: center;
}

.pedigree-okcancel {
    /*width: 680px !important;*/
}

.no-mouse-interaction {
    pointer-events: none;
}

/* Make sure the tooltips fit nicely in the suggest box in the pedigree editor: */
.suggestItem .xTooltip {
    left: 4px;
    margin: 1.4em 0 0;
}

.cancer_field td {
    padding: .2em;
}

.cancer_textarea td {
    padding: .3em 0 .2em .2em;
}

.cancer-header td {
    padding-top: 0.65em;
}

.cancer-notes {
    margin-left: 2px;
}

.cancer-notes-textarea {
    margin-bottom: 4px;
}

.cancer-header {
    color: #888;
}

.cancer_status_select {
    margin-right: 10px;
}

.cancer_age_select {
    margin-right: 3px;
}

.cancer_field .clickable:hover {
    cursor: pointer;
}

.cancer_field label.clickable.disabled {
    color: #CCC;
    cursor: default;
}

.cancer_field textarea {
    margin-top: 3px;
}

.menu-box .patient-no-cancers-button {
    width: 88%;
    max-width: 20em;
    margin-top: 10px;
    float: left !important;
    text-align: center;
}

/* Option types */
.node-type-options .node-type-m.text-in-middle strong {
    font-size: 10px;
    left: 10px;
    top: 5px;
}

/* Datepicker style */
.fuzzy-date-picker {
    margin-right: -2px;
}

.fuzzy-date-picker select {
    font-family: Arial, Verdana, sans-serif;
}

.fuzzy-date-picker .year {
    font-size: 14px;
    max-width: 68px;
}

.fuzzy-date-picker .month {
    font-size: 14px;
    max-width: 48px;
}

.fuzzy-date-picker .day {
    font-size: 14px;
    max-width: 48px;
}

.fuzzy-date-picker .empty {
    font-size: .7em;
    opacity: .5;
}

.fuzzy-date-picker .year option {
    /*text-indent: 1em;*/
}

.fuzzy-date-picker .year .decade {
    font-weight: bold;
    /*text-indent: 0;*/
}

.fuzzy-date-picker .year .century {
    font-weight: bold;
    /*text-indent: 0;*/
}

.UnRendered-legend-container {
    bottom: 5px;
    position: absolute;
    z-index: 10000;
    min-width: 140px;
    max-width: 255px;
}

#UnRendered-legend-box {
    background-color: #FFF;
}

li.UnRendered-legend-box-item {
    background-color: #F7F0F0;
    padding: 3px;
    border-radius: 4px;
    margin-bottom: 3px;
}

li.UnRendered-legend-box-item-selected {
    background-color: #F5F5F5;
    padding: 3px;
    border-radius: 4px;
    margin-bottom: 3px;
}

span.unRenderedItemName {
    font-size: 12px;
    font-weight: bold;
    width: 65px;
    display: inline-block;
    text-align: left;
}

span.unRenderedItemValue {
    font-size: 12px;
    display: inline-block;
    text-align: left;
    padding-left: 6px;
}
/* ... */

